# nemo

./: .gitignore  AUTHORS  COPYING  COPYING.EXTENSIONS  CVSVERSION  ChangeLog  ChangeLog-20000414  ChangeLog-20000625  ChangeLog-20000831  ChangeLog-20001018  ChangeLog-20010201  ChangeLog-20010420  ChangeLog-20041029  ChangeLog-20090417  Dockerfile  HACKING  MAINTAINERS  Makefile  Makefile.am  Makefile.in  Makefile.shared  NEWS  README  README.commits  README.dpkg  README.md  RENAMING  THANKS  TODO  TODO-gio  aclocal.m4  add-include-prefix  autogen.sh  check-FIXME.pl  check-POTFILES.pl  check-THANKS.pl  check-config-h.pl  check-headers-in-Makefile.pl  check-strings-functions  check-strings-patterns  (+17 more)
action-layout-editor/: actions-tree.md  leconfig.py.in  meson.build  nemo-action-layout-editor.glade  nemo-action-layout-editor.in  nemo-action-layout-editor.py  nemo_action_layout_editor.py
data/: .gitignore  90_new-workspace.nemo_action.in  91_delete-workspace.nemo_action.in  92_show-expo.nemo_action.in  Makefile.am  Makefile.in  action_i18n_strings.py  add-desklets.nemo_action.in  change-background-gnome.nemo_action.in  change-background-unity.nemo_action.in  change-background.nemo_action.in  dbus-interfaces.xml  desktop-settings.nemo_action.in  enqueue_audacious.nemo_action.in  evolution-mailto.nemo_action.in  extract_action_strings  fileroller-compress.nemo_action.in  fileroller-extract.nemo_action.in  freedesktop-dbus-interfaces.xml  merge_action_strings  meson.build  nautilus-autorun-software.desktop.in.in  nautilus-autostart.desktop.in  nautilus-classic.desktop.in  nautilus-connect-server.desktop.in.in  nautilus-extras.placeholder  nautilus-search-provider.ini  nautilus-suggested.placeholder  nautilus.appdata.xml.in  nautilus.desktop.in.in  nautilus.xml.in  nemo-autorun-software.desktop.in  nemo-autorun-software.desktop.in.in  nemo-autostart.desktop.in  nemo-connect-server.desktop.in.in  nemo-extras.placeholder  nemo-search-provider.ini  nemo-suggested.placeholder  nemo.appdata.xml.in  nemo.css  (+28 more)
docs/: Makefile.am  Makefile.in  architecture.txt  dnd.txt  key_mouse_navigation.txt  load-states.dia  meson.build  nautilus-connect-server.1  nautilus-internals.sxw  nautilus-io.txt  nautilus.1  nautilus.faq  nemo-connect-server.1  nemo-desktop.1  nemo-internals.sxw  nemo-io.txt  nemo.1  nemo.faq  recommended-books.html  smoketests.html  state-machines.txt  style-guide.html
eel/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  README.canvas  check-eel  check-program.c  eel-accessibility.c  eel-accessibility.h  eel-art-extensions.c  eel-art-extensions.h  eel-canvas.c  eel-canvas.h  eel-debug.c  eel-debug.h  eel-editable-label.c  eel-editable-label.h  eel-gdk-extensions.c  eel-gdk-extensions.h  eel-glib-extensions.c  eel-glib-extensions.h  eel-gnome-extensions.c  eel-gnome-extensions.h  eel-graphic-effects.c  eel-graphic-effects.h  eel-gtk-extensions.c  eel-gtk-extensions.h  eel-lib-self-check-functions.c  eel-lib-self-check-functions.h  eel-self-checks.c  eel-self-checks.h  eel-stock-dialogs.c  eel-stock-dialogs.h  eel-string.c  eel-string.h  eel-vfs-extensions.c  eel-vfs-extensions.h  eel.h  meson.build
gresources/: meson.build  nemo-action-layout-editor.glade  nemo-action-layout-editor.gresource.xml  nemo-action-wizard.glade  nemo-blank-desktop-window-ui.xml  nemo-bookmarks-window.glade  nemo-desktop-icon-grid-view-ui.xml  nemo-desktop-overlay.glade  nemo-desktop-preferences.glade  nemo-directory-view-ui.xml  nemo-file-chooser-dialog.glade  nemo-file-management-properties.glade  nemo-icon-view-ui.xml  nemo-places-sidebar-ui.xml  nemo-search-bar.glade  nemo-shell-ui.xml  nemo-shortcuts.ui  nemo-statusbar-ui.xml  nemo-style-application.css  nemo-style-desktop.css  nemo-style-fallback-mandatory.css  nemo-style-fallback.css  nemo-tree-sidebar-ui.xml  nemo.gresource.xml
libnautilus-extension/: Makefile.am  libnautilus-extension-uninstalled.pc.in  libnautilus-extension.pc.in  nautilus-column-provider.c  nautilus-column-provider.h  nautilus-column.c  nautilus-column.h  nautilus-extension-i18n.h  nautilus-extension-private.h  nautilus-extension-types.c  nautilus-extension-types.h  nautilus-file-info.c  nautilus-file-info.h  nautilus-info-provider.c  nautilus-info-provider.h  nautilus-location-widget-provider.c  nautilus-location-widget-provider.h  nautilus-menu-item.c  nautilus-menu-item.h  nautilus-menu-provider.c  nautilus-menu-provider.h  nautilus-menu.c  nautilus-menu.h  nautilus-property-page-provider.c  nautilus-property-page-provider.h  nautilus-property-page.c  nautilus-property-page.h
libnautilus-private/: .gitignore  Makefile.am  README  nautilus-bookmark.c  nautilus-bookmark.h  nautilus-canvas-container.c  nautilus-canvas-container.h  nautilus-canvas-dnd.c  nautilus-canvas-dnd.h  nautilus-canvas-item.c  nautilus-canvas-item.h  nautilus-canvas-private.h  nautilus-cell-renderer-text-ellipsized.c  nautilus-cell-renderer-text-ellipsized.h  nautilus-clipboard-monitor.c  nautilus-clipboard-monitor.h  nautilus-clipboard.c  nautilus-clipboard.h  nautilus-column-chooser.c  nautilus-column-chooser.h  nautilus-column-utilities.c  nautilus-column-utilities.h  nautilus-dbus-manager.c  nautilus-dbus-manager.h  nautilus-debug.c  nautilus-debug.h  nautilus-default-file-icon.c  nautilus-default-file-icon.h  nautilus-desktop-background.c  nautilus-desktop-background.h  nautilus-desktop-directory-file.c  nautilus-desktop-directory-file.h  nautilus-desktop-directory.c  nautilus-desktop-directory.h  nautilus-desktop-icon-file.c  nautilus-desktop-icon-file.h  nautilus-desktop-link-monitor.c  nautilus-desktop-link-monitor.h  nautilus-desktop-link.c  nautilus-desktop-link.h  (+117 more)
libnemo-extension/: Makefile.am  Makefile.in  libnemo-extension-uninstalled.pc.in  libnemo-extension.pc.in  meson.build  nemo-action-layout-editor.c  nemo-action-layout-editor.h  nemo-column-provider.c  nemo-column-provider.h  nemo-column.c  nemo-column.h  nemo-desktop-preferences.c  nemo-desktop-preferences.h  nemo-extension-i18n.h  nemo-extension-private.h  nemo-extension-types.c  nemo-extension-types.h  nemo-menu.c  (+22 more)
(+1057 files in other folders)
